k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-detector-service
spec:
  selector:
    app: image-detector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
